--- a/sgi-avalom/package.json
+++ b/sgi-avalom/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-hook/window-size": "^3.1.1",
     "@tanstack/react-table": "^8.19.2",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
