--- a/sgi-avalom/package.json
+++ b/sgi-avalom/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
