--- a/sgi-avalom/package.json
+++ b/sgi-avalom/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-hook/window-size": "^3.1.1",
     "@tanstack/react-table": "^8.19.2",
