--- a/sgi-avalom/package.json
+++ b/sgi-avalom/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.16.1",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -36,9 +36,10 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
+    "decimal.js": "^10.4.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.400.0",
-    "next": "14.2.4",
+    "next": "^15.0.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -61,10 +62,10 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "bcryptjs": "^2.4.3",
-    "cookie": "^0.6.0",
+    "cookie": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "postcss": "^8.4.39",
-    "prisma": "^5.16.1",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
