--- a/sgi-avalom/package.json
+++ b/sgi-avalom/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
