--- a/sgi-avalom/package.json
+++ b/sgi-avalom/package.json
@@ -43,6 +43,7 @@
     "lucide-react": "^0.400.0",
     "next": "^15.0.3",
     "next-themes": "^0.3.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -52,6 +53,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
