--- a/sgi-avalom/package.json
+++ b/sgi-avalom/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
@@ -39,6 +40,7 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "decimal.js": "^10.4.3",
+    "framer-motion": "^12.12.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.400.0",
     "next": "^15.0.3",
@@ -48,7 +50,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.3",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
