--- a/sgi-avalom/package.json
+++ b/sgi-avalom/package.json
@@ -74,6 +74,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
     "babel-jest": "^29.7.0",
     "bcryptjs": "^2.4.3",
